# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
gendiff/: get_json_diff.py
gendiff/scripts/: __init__.py  gendiff.py
