[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Vadim Sotnikov <602587@list.ru>"]
readme = "README.md"
packages = [
    { include = "gendiff" },
]
classifiers = [
    "Build Moduls",
    "Libraries :: Python Modules, Prompt"
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
